sftp/error_sample.txt
upload_pdfs_to_s3_udf = udf(lamdba  PDF_file_name, ConsultId: upload_pdfs_to_s3(PDF_file_name, ConsultId, sftp, s3, lit(args['aspen_sftp_path']), lit(args['fax_s3bucket']), lit(args['cloud_front_url']), cdm_creds, logger, args['JOB_NAME']), StringType())


An error was encountered:
invalid syntax. Perhaps you forgot a comma? (<stdin>, line 1)
  File "<stdin>", line 1
    upload_pdfs_to_s3_udf = udf(lamdba  PDF_file_name, ConsultId: upload_pdfs_to_s3(PDF_file_name, ConsultId, sftp, s3, lit(args['aspen_sftp_path']), lit(args['fax_s3bucket']), lit(args['cloud_front_url']), cdm_creds, logger, args['JOB_NAME']), StringType())
                                ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
